test/errors/type/collections/set/__le2.yasl
echo mt.lookup(collections.set(), .__le)(1, collections.set())
